Finaliza endpoints Cliente
